--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ladera</title>
 </head>
+<header>
+    <img src="" alt="Logo Ladera">
+    <h1>Ladera</h1>
+<nav>
+    <ul>
+        <li>Desafíos Ladera</li>
+        <li>Rutas</li>
+        <li>Parques</li>
+        <li>Mapa</li>
+        <li>Sobre nosotros</li>
+    </ul>
+</nav>
+</header>
 <body>
-    
+    <main>
+
+    </main>
+    <section>
+        <p>Sponsor</p>
+    </section>
 </body>
+<footer>
+    <h5>Síguenos</h5>
+</footer>
 </html>
