se añade html a landing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,25 +11,30 @@
 <header>
     <img src="" alt="Logo Ladera">
     <h1>Ladera</h1>
-<nav>
-    <ul>
-        <li>Desafíos Ladera</li>
-        <li>Rutas</li>
-        <li>Parques</li>
-        <li>Mapa</li>
-        <li>Sobre nosotros</li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li> <a href="#">Desafíos Ladera</li></a>
+            <li> <a href="#">Rutas</li></a>
+            <li> <a href="#">Parques</li></a>
+            <li> <a href="#">Mapa</li></a>
+            <li> <a href="#">Avistamientos</li></a>
+            <li> <a href="#">Sobre nosotros</li></a>
+        </ul>
+    </nav>
 </header>
-<body>
-    <main>
+<section>
 
-    </main>
-    <section>
-        <p>Sponsor</p>
-    </section>
+</section>
+<main>
+
+</main>
+<section>
+    <h2>Sponsors</h2>
+    <img src="assets/img/Captura-de-pantalla-2021-05-27-a-las-11.32.48.webp" width="20%" alt="terrex">
+</section>
 </body>
 <footer>
     <h5>Síguenos</h5>
+
 </footer>
 </html>
