se añade body base html del sitio ladera

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Ladera</title>
 </head>
 <header>
@@ -23,18 +23,49 @@
     </nav>
 </header>
 <section>
-
+    <img src="assets/img/slider/trekking-en-Santiago.jpg" width="50%" alt="slider">
 </section>
 <main>
+    <section>
+        <h1>Rutas</h1>
+        <picture><img src="assets/img/rutas/arica.jpeg" width="20%" alt="Arica"></picture>
+        <picture><img src="assets/img/rutas/cerro-provincia10-1-640x428.jpg" alt="Santiago"></picture>
+        <picture><img src="assets/img/rutas/paine.jpeg" width="30%"  alt="magallanes"></picture>
+        <picture><img src="assets/img/rutas/trekking-parque-nacional-nahuelbuta-compressor.jpg" width="30%" alt="araucanía"></picture>
+        <picture><img src="assets/img/rutas/trek-cochamo-01.jpg" width="30%" alt="ríos"></picture>
+        <picture><img src="assets/img/rutas/huilo.jpg" width="30%" alt="Lagos"></picture>
+    </section>
+    <section>
+        <h1>Desafíos Ladera</h1>
+        
+    </section>
+    <section>
+        <h1>Avistamientos del mes</h1>
+        <picture> <img src="assets/img/avistamientos/saltos-del-huilo-huilo (1).jpg" alt="ranita"> </picture>
+        <picture> <img src="assets/img/avistamientos/saltos-del-huilo-huilo (2).jpg" alt="fungi"> </picture>
+        <picture> <img src="assets/img/avistamientos/saltos-del-huilo-huilo.jpg" alt="huemul"> </picture>
 
+    </section>
 </main>
 <section>
     <h2>Sponsors</h2>
-    <img src="assets/img/Captura-de-pantalla-2021-05-27-a-las-11.32.48.webp" width="20%" alt="terrex">
+    <picture>
+        <img src="assets/img/sponsors/Captura-de-pantalla-2021-05-27-a-las-11.32.48.webp" width="20%" alt="terrex">
+    </picture>
+    <picture>
+        <img src="assets/img/sponsors/lippi.webp" width="10%" alt="lippi">
+    </picture>
+    <picture>
+        <img src="assets/img/sponsors/Doite.png" width="10%" alt="doite">
+    </picture>
+    <picture>
+        <img src="assets/img/sponsors/logoHelly-Hansen.png" width="10%" alt="HH">
+    </picture>
 </section>
 </body>
 <footer>
     <h5>Síguenos</h5>
 
 </footer>
+
 </html>
