se añade botón ver más

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <picture><img src="assets/img/rutas/trek-cochamo-01.jpg" width="30%" alt="ríos"></picture>
         <picture><img src="assets/img/rutas/huilo.jpg" width="30%" alt="Lagos"></picture>
     </section>
+    <button>Ver más</button>
     <section>
         <h1>Desafíos Ladera</h1>
         
