se limpia en nav para no generar conflictos con merge

--- a/index.html
+++ b/index.html
@@ -7,27 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />\
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@400;500;700&family=Ubuntu:ital,wght@1,300&display=swap"
       rel="stylesheet">
     <title>Ladera</title>
 </head>
-<header>
-  <img src="" alt="Logo Ladera" />
-  <h1>Ladera</h1>
-  <nav>
-    <ul>
-      <li>Desafíos Ladera</li>
-      <li>Rutas</li>
-      <li>Parques</li>
-      <li>Mapa</li>
-      <li>Sobre nosotros</li>
-    </ul>
-  </nav>
-</header>
-
 <body>
   <main></main>
   <section>
