Se agrega nav basico a index.html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     <img src="" alt="Logo Ladera">
     <h1>Ladera</h1>
     <nav>
-
-    </nav>
+      <ul>
+          <li><a href="#">Mapa</a></li>
+          <li><a href="#">Desafíos</a></li>
+          <li><a href="#">Rutas</a></li>
+          <li><a href="#">Fauna</a></li>
+          <li><a href="#">Sobre nosotros</a></li>
+      </ul>
+  </nav>
   </header>
   <main>
 
