--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <img src="" alt="Logo Ladera">
+    <img src="assets/img/nav/logo_color.png" alt="Logo Ladera">
     <h1>Ladera</h1>
     <nav>
       <ul>
@@ -112,9 +112,9 @@
 
         <ul class="link">
           <li>
-            <img src="./assets/img/footer/instagramIcon.png" width="40px" alt="" />
+            <img src="./assets/img/footer/instagramIcon.png" alt="instagraIcon" />
           </li>
-          <img src="./assets/img/footer/facebookicon.png" width="40" alt="" />
+          <img src="./assets/img/footer/facebookicon.png" alt="facebookIcon" />
         </ul>
       </td>
       </tr>
